# MC-Assigment-3

./: README.md
MatrixCalculator/: ReadMe.md  settings.gradle.kts
MatrixCalculator/app/: build.gradle.kts
MatrixCalculator/app/src/main/: AndroidManifest.xml
MatrixCalculator/app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp
MatrixCalculator/app/src/main/java/com/example/matrixcalculator/: MainActivity.kt  MatrixOperations.kt
MatrixCalculator/app/src/main/java/com/example/matrixcalculator/ui/theme/: Color.kt  Theme.kt  Type.kt
MatrixCalculator/app/src/main/res/values/: strings.xml  themes.xml
MatrixCalculator/gradle/: libs.versions.toml
MatrixCalculator/gradle/wrapper/: gradle-wrapper.properties
WiFiSignalLogger/: ReadMe.md  settings.gradle.kts
WiFiSignalLogger/app/: build.gradle.kts
WiFiSignalLogger/app/src/androidTest/java/com/example/wifisignallogger/: ExampleInstrumentedTest.kt
WiFiSignalLogger/app/src/main/: AndroidManifest.xml
WiFiSignalLogger/app/src/main/java/com/example/wifisignallogger/: MainActivity.kt
WiFiSignalLogger/app/src/main/java/com/example/wifisignallogger/ui/theme/: Color.kt  Theme.kt  Type.kt
WiFiSignalLogger/app/src/main/res/values/: strings.xml  themes.xml
WiFiSignalLogger/app/src/test/java/com/example/wifisignallogger/: ExampleUnitTest.kt
WiFiSignalLogger/gradle/wrapper/: gradle-wrapper.properties
